res/res_ari_recordings.c
@@ -873,6 +873,10 @@ static int unload_module(void)
 static int load_module(void)
 {
 	int res = 0;
+
+	CHECK_ARI_MODULE_LOADED();
+
+
 	stasis_app_ref();
 	res |= ast_ari_add_handler(&recordings);
 	if (res) {
